static/css/packages.css
/* main body */

body {
    --title-height: calc(var(--content-gap) * 4);
    --title-logogap: 20px;
    --logo-height: var(--content-gap);
    --color-listborder: #e0e0e0;
    --color-listmod: #f0f0f0;
    --color-listmid: #e8e8e8;
    background-color: var(--color-tbg);
}

@media (prefers-color-scheme: dark) {
    body {
        --color-listborder: var(--color-hdr);
        --color-listmod: #363f47;
        --color-listmid: #2f3841;
    }
}

#container {
    grid-template-columns: 1fr min(var(--content-width)) 1fr;
    grid-template-rows: auto fit-content(var(--title-height)) 1fr var(--content-gap);
    grid-template-areas:
        ". header ."
        ". title  ."
        ". content ."
        ". footer .";
}

#credit {
    text-align: center;
    padding-top: 2em;
}

/* title part */

#title #logo {
    height: var(--logo-height);
    margin-top: var(--title-logogap);
}

#title > h1 {
    color: var(--color-fontlight);
    margin-top: 0px;
}

/* content */

#content {
    grid-area: content;
    padding-left: var(--content-gap);
    padding-right: var(--content-gap);
    padding-top: var(--content-altgap);
    padding-bottom: var(--content-altgap);
}

#content > hr {
    color: var(--color-tblsep);
}

#content table {
    border-collapse: collapse;
    width: 100%;
    max-width: 100%;
}

#content th, td {
    text-align: left;
    border-bottom: 1px solid var(--color-tblsep);
    padding: var(--table-pad);
}

#content .post_date {
    display: block;
    font-family: "Poppins", sans-serif;
    font-weight: 500;
    color: var(--color-chead);
    font-size: 17pt;
}

/* filter */

#filter-head {
    background-color: var(--color-listborder);
    padding: 0.5em 1em;
    font-weight: 700;
}

#filter-body {
    padding: 0.5em;
    border: 1px solid var(--color-listborder);
    border-top: 0;
    margin-bottom: 2em;
}

#filter-body input {
    max-width: 180px;
}

/* filter switch */

#filter-switch {
    text-align: center;
    padding-bottom: 1.5em;
}

#filter-switch ul {
    list-style-type: none;
    text-align: center;
    margin: 0;
    padding: 0;
}

#filter-switch li {
    display: inline;
    margin: 0;
    padding: 0;
}

#filter-switch li a {
    padding: 6px 12px;
    border: 1px solid var(--color-listborder);
    color: var(--color-chred);
}

#filter-switch li.active a {
    background: rgb(214, 79, 93);
    color: var(--color-fontlight);
}

/* pagination */

#pagination {
    margin-top: 2em;
}

#pagination ul {
    list-style-type: none;
    text-align: center;
    margin: 0;
    padding: 0;
}

#pagination li {
    display: inline;
    margin: 0;
    padding: 0;
}

#pagination li a {
    padding: 6px 12px;
    border: 1px solid var(--color-listborder);
    color: var(--color-chred);
}

#pagination li.active a {
    background: var(--color-chred);
    color: var(--color-fontlight);
}

/* packages list */

#main-list {
    width: 100%;
    overflow-x: clip;
}

#main-list table {
    border: 1px solid var(--color-listborder);
    border-top: 0;
    margin-top: 2em;
    width: 100%;
}

#main-list thead {
    background-color: var(--color-listborder);
    font-weight: 700;
}

#main-list tbody tr:nth-child(odd) {
    background-color: var(--color-listmod);
}

#main-list th {
    padding: 0.5em 1em;
    border: 1px solid var(--color-listborder);
}

#main-list td {
    padding: 0.5em 1em;
    border: 1px solid var(--color-listborder);
}

#main-list td.version {
    font-weight: 700;
}

/* package info */

#package {
    border: 1px solid var(--color-listborder);
}

#package th {
    padding: 0.5em 1em;
    border: 1px solid var(--color-listborder);
    background-color: var(--color-listmid);
}

#package td {
    padding: 0.5em 1em;
    border: 1px solid var(--color-listborder);
}

#package tr:nth-child(odd) {
    background-color: var(--color-listmod);
}

/* responsive layout adjustments */

@media (max-width: 1023px) {
    body {
        --side-padding: 16px;
    }

    #container {
        grid-template-columns: minmax(var(--side-padding), 1fr) auto minmax(var(--side-padding), 1fr);
    }

    #content {
        padding-left: var(--side-padding);
        padding-right: var(--side-padding);
        padding-top: 0;
        padding-bottom: var(--content-halfgap);
    }

    #filter-switch {
        text-align: center;
        margin-top: 1.5em;
    }
}

